3 uloha nie je hotova

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@
 /cv10u1/build/
 /cv10u1servis/nbproject/private/
 /cv10u1servis/build/
+/tt/nbproject/private/
+/tt/build/
+/ttservis/nbproject/private/
+/ttservis/build/
+/cv10u1servis/dist/
+/cv10u3/nbproject/private/
