--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,26 @@
 /ttservis/build/
 /cv10u1servis/dist/
 /cv10u3/nbproject/private/
+/container-item_9_4/nbproject/private/
+/cv9u4container-item/nbproject/private/
+/cv9u4container-item/build/
+/nativeQuery/nbproject/private/
+/nativeQuery/build/
+/neviem1/nbproject/private/
+/dbapp/nbproject/private/
+/dbapp/build/
+/restapp/nbproject/private/
+/restapp/build/
+/restappServis/nbproject/private/
+/restappServis/build/
+/cv11u3/nbproject/private/
+/cv11u3/build/
+/cv11u3/dist/
+/testDedicnosti/nbproject/private/
+/testDedicnosti/build/
+/testDedicnosti/dist/
+/cv7u1/nbproject/private/
+/cv7u1/build/
+/cv7u1/dist/
+/cv7u2/nbproject/private/
+/cv7u2/build/
